KqaPro_Parser/ir/UnifiedIRParser.py
# Generated from ./KqaPro_Parser/ir/UnifiedIRParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class UnifiedIRParser ( Parser ):

    grammarFileName = "UnifiedIRParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'which one has the'", 
                     "'how many'", "'whether'", "'of'", "'from'", "'to'", 
                     "'among'", "'top'", "'ones'", "'the'", "'whose'", "'that'", 
                     "'('", "')'", "'forward'", "'backward'", "'and'", "'or'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'at least'", "'at most'", "'largest'", "'smallest'", 
                     "'text'", "'number'", "'date'", "'year'", "' '", "'<ES>'", 
                     "'</ES>'", "'<E>'", "'<A>'", "'<R>'", "'<C>'", "'<Q>'", 
                     "'<V>'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'</E>'", "'</A>'", "'</R>'", "'</C>'", "'</Q>'", "'</V>'" ]

    symbolicNames = [ "<INVALID>", "WS", "What", "Select", "Count", "Verify", 
                      "Of", "From", "To", "Among", "Top", "Ones", "The", 
                      "Whose", "That", "LB", "RB", "Forward", "Backward", 
                      "And", "Or", "Is", "NotIs", "LargerThan", "SmallerThan", 
                      "AtLeast", "AtMost", "Largest", "Smallest", "Text", 
                      "Quantity", "Date", "Year", "SPACE", "ES_START", "ES_END", 
                      "ENTI_START", "ATTR_START", "PRED_START", "CONC_START", 
                      "QUAL_START", "VALU_START", "INTEGER", "DECIMAL", 
                      "DIGIT", "STRING_LITERAL", "ENTI_END", "ATTR_END", 
                      "PRED_END", "CONC_END", "QUAL_END", "VALU_END", "LITERAL" ]

    RULE_query = 0
    RULE_entityQuery = 1
    RULE_attributeQuery = 2
    RULE_predicateQuery = 3
    RULE_qualifierQuery = 4
    RULE_countQuery = 5
    RULE_verifyQuery = 6
    RULE_selectQuery = 7
    RULE_verify = 8
    RULE_entitySet = 9
    RULE_filterFromEntitySet = 10
    RULE_filterByRank = 11
    RULE_filterByAttribute = 12
    RULE_filterByPredicate = 13
    RULE_filterByQualifier = 14
    RULE_direction = 15
    RULE_setOP = 16
    RULE_symbolOP = 17
    RULE_stringOP = 18
    RULE_valueType = 19
    RULE_entity = 20
    RULE_attribute = 21
    RULE_concept = 22
    RULE_predicate = 23
    RULE_qualifier = 24
    RULE_value = 25
    RULE_number = 26
    RULE_string = 27

    ruleNames =  [ "query", "entityQuery", "attributeQuery", "predicateQuery", 
                   "qualifierQuery", "countQuery", "verifyQuery", "selectQuery", 
                   "verify", "entitySet", "filterFromEntitySet", "filterByRank", 
                   "filterByAttribute", "filterByPredicate", "filterByQualifier", 
                   "direction", "setOP", "symbolOP", "stringOP", "valueType", 
                   "entity", "attribute", "concept", "predicate", "qualifier", 
                   "value", "number", "string" ]

    EOF = Token.EOF
    WS=1
    What=2
    Select=3
    Count=4
    Verify=5
    Of=6
    From=7
    To=8
    Among=9
    Top=10
    Ones=11
    The=12
    Whose=13
    That=14
    LB=15
    RB=16
    Forward=17
    Backward=18
    And=19
    Or=20
    Is=21
    NotIs=22
    LargerThan=23
    SmallerThan=24
    AtLeast=25
    AtMost=26
    Largest=27
    Smallest=28
    Text=29
    Quantity=30
    Date=31
    Year=32
    SPACE=33
    ES_START=34
    ES_END=35
    ENTI_START=36
    ATTR_START=37
    PRED_START=38
    CONC_START=39
    QUAL_START=40
    VALU_START=41
    INTEGER=42
    DECIMAL=43
    DIGIT=44
    STRING_LITERAL=45
    ENTI_END=46
    ATTR_END=47
    PRED_END=48
    CONC_END=49
    QUAL_END=50
    VALU_END=51
    LITERAL=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(UnifiedIRParser.EOF, 0)

        def entityQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntityQueryContext,0)


        def attributeQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.AttributeQueryContext,0)


        def predicateQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.PredicateQueryContext,0)


        def qualifierQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.QualifierQueryContext,0)


        def countQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.CountQueryContext,0)


        def verifyQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.VerifyQueryContext,0)


        def selectQuery(self):
            return self.getTypedRuleContext(UnifiedIRParser.SelectQueryContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = UnifiedIRParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 56
                self.entityQuery()
                pass

            elif la_ == 2:
                self.state = 57
                self.attributeQuery()
                pass

            elif la_ == 3:
                self.state = 58
                self.predicateQuery()
                pass

            elif la_ == 4:
                self.state = 59
                self.qualifierQuery()
                pass

            elif la_ == 5:
                self.state = 60
                self.countQuery()
                pass

            elif la_ == 6:
                self.state = 61
                self.verifyQuery()
                pass

            elif la_ == 7:
                self.state = 62
                self.selectQuery()
                pass


            self.state = 65
            self.match(UnifiedIRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_entityQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityQuery" ):
                listener.enterEntityQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityQuery" ):
                listener.exitEntityQuery(self)




    def entityQuery(self):

        localctx = UnifiedIRParser.EntityQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entityQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(UnifiedIRParser.What)
            self.state = 68
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def attribute(self):
            return self.getTypedRuleContext(UnifiedIRParser.AttributeContext,0)


        def Of(self):
            return self.getToken(UnifiedIRParser.Of, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_attributeQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeQuery" ):
                listener.enterAttributeQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeQuery" ):
                listener.exitAttributeQuery(self)




    def attributeQuery(self):

        localctx = UnifiedIRParser.AttributeQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_attributeQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(UnifiedIRParser.What)
            self.state = 71
            self.attribute()
            self.state = 72
            self.match(UnifiedIRParser.Of)
            self.state = 73
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def From(self):
            return self.getToken(UnifiedIRParser.From, 0)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)


        def To(self):
            return self.getToken(UnifiedIRParser.To, 0)

        def getRuleIndex(self):
            return UnifiedIRParser.RULE_predicateQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateQuery" ):
                listener.enterPredicateQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateQuery" ):
                listener.exitPredicateQuery(self)




    def predicateQuery(self):

        localctx = UnifiedIRParser.PredicateQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_predicateQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(UnifiedIRParser.What)
            self.state = 76
            self.match(UnifiedIRParser.From)
            self.state = 77
            self.entitySet()
            self.state = 78
            self.match(UnifiedIRParser.To)
            self.state = 79
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifierQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def What(self):
            return self.getToken(UnifiedIRParser.What, 0)

        def qualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.QualifierContext,0)


        def Of(self):
            return self.getToken(UnifiedIRParser.Of, 0)

        def verify(self):
            return self.getTypedRuleContext(UnifiedIRParser.VerifyContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_qualifierQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifierQuery" ):
                listener.enterQualifierQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifierQuery" ):
                listener.exitQualifierQuery(self)




    def qualifierQuery(self):

        localctx = UnifiedIRParser.QualifierQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_qualifierQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(UnifiedIRParser.What)
            self.state = 82
            self.qualifier()
            self.state = 83
            self.match(UnifiedIRParser.Of)
            self.state = 84
            self.verify()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CountQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Count(self):
            return self.getToken(UnifiedIRParser.Count, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_countQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCountQuery" ):
                listener.enterCountQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCountQuery" ):
                listener.exitCountQuery(self)




    def countQuery(self):

        localctx = UnifiedIRParser.CountQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_countQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(UnifiedIRParser.Count)
            self.state = 87
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerifyQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Verify(self):
            return self.getToken(UnifiedIRParser.Verify, 0)

        def verify(self):
            return self.getTypedRuleContext(UnifiedIRParser.VerifyContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_verifyQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerifyQuery" ):
                listener.enterVerifyQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerifyQuery" ):
                listener.exitVerifyQuery(self)




    def verifyQuery(self):

        localctx = UnifiedIRParser.VerifyQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_verifyQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(UnifiedIRParser.Verify)
            self.state = 90
            self.verify()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Select(self):
            return self.getToken(UnifiedIRParser.Select, 0)

        def filterByRank(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByRankContext,0)


        def Among(self):
            return self.getToken(UnifiedIRParser.Among, 0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_selectQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectQuery" ):
                listener.enterSelectQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectQuery" ):
                listener.exitSelectQuery(self)




    def selectQuery(self):

        localctx = UnifiedIRParser.SelectQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectQuery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(UnifiedIRParser.Select)
            self.state = 93
            self.filterByRank()
            self.state = 94
            self.match(UnifiedIRParser.Among)
            self.state = 95
            self.entitySet()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerifyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_verify

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VerifyByPredicateContext(VerifyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.VerifyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def filterByPredicate(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByPredicateContext,0)

        def filterByQualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByQualifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerifyByPredicate" ):
                listener.enterVerifyByPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerifyByPredicate" ):
                listener.exitVerifyByPredicate(self)


    class VerifyByAttributeContext(VerifyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.VerifyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)

        def filterByAttribute(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByAttributeContext,0)

        def filterByQualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByQualifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerifyByAttribute" ):
                listener.enterVerifyByAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerifyByAttribute" ):
                listener.exitVerifyByAttribute(self)



    def verify(self):

        localctx = UnifiedIRParser.VerifyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_verify)
        self._la = 0 # Token type
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = UnifiedIRParser.VerifyByAttributeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.entitySet()
                self.state = 98
                self.filterByAttribute()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==UnifiedIRParser.LB:
                    self.state = 99
                    self.filterByQualifier()


                pass

            elif la_ == 2:
                localctx = UnifiedIRParser.VerifyByPredicateContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.entitySet()
                self.state = 103
                self.filterByPredicate()
                self.state = 104
                self.entitySet()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==UnifiedIRParser.LB:
                    self.state = 105
                    self.filterByQualifier()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntitySetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_entitySet

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EntitySetGroupContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ES_START(self):
            return self.getToken(UnifiedIRParser.ES_START, 0)
        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def setOP(self):
            return self.getTypedRuleContext(UnifiedIRParser.SetOPContext,0)

        def ES_END(self):
            return self.getToken(UnifiedIRParser.ES_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetGroup" ):
                listener.enterEntitySetGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetGroup" ):
                listener.exitEntitySetGroup(self)


    class EntitySetIntersectContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ES_START(self):
            return self.getToken(UnifiedIRParser.ES_START, 0)
        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def LB(self):
            return self.getToken(UnifiedIRParser.LB, 0)
        def RB(self):
            return self.getToken(UnifiedIRParser.RB, 0)
        def ES_END(self):
            return self.getToken(UnifiedIRParser.ES_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetIntersect" ):
                listener.enterEntitySetIntersect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetIntersect" ):
                listener.exitEntitySetIntersect(self)


    class EntitySetAtomContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def entity(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntityContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetAtom" ):
                listener.enterEntitySetAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetAtom" ):
                listener.exitEntitySetAtom(self)


    class EntitySetPlaceholderContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Ones(self):
            return self.getToken(UnifiedIRParser.Ones, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetPlaceholder" ):
                listener.enterEntitySetPlaceholder(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetPlaceholder" ):
                listener.exitEntitySetPlaceholder(self)


    class EntitySetFilterContext(EntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.EntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ES_START(self):
            return self.getToken(UnifiedIRParser.ES_START, 0)
        def filterFromEntitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterFromEntitySetContext,0)

        def ES_END(self):
            return self.getToken(UnifiedIRParser.ES_END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetFilter" ):
                listener.enterEntitySetFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetFilter" ):
                listener.exitEntitySetFilter(self)



    def entitySet(self):

        localctx = UnifiedIRParser.EntitySetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_entitySet)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = UnifiedIRParser.EntitySetGroupContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(UnifiedIRParser.ES_START)
                self.state = 111
                self.entitySet()
                self.state = 112
                self.setOP()
                self.state = 113
                self.entitySet()
                self.state = 114
                self.match(UnifiedIRParser.ES_END)
                pass

            elif la_ == 2:
                localctx = UnifiedIRParser.EntitySetIntersectContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(UnifiedIRParser.ES_START)
                self.state = 117
                self.entitySet()
                self.state = 118
                self.match(UnifiedIRParser.LB)
                self.state = 119
                self.entitySet()
                self.state = 120
                self.match(UnifiedIRParser.RB)
                self.state = 121
                self.match(UnifiedIRParser.ES_END)
                pass

            elif la_ == 3:
                localctx = UnifiedIRParser.EntitySetFilterContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(UnifiedIRParser.ES_START)
                self.state = 124
                self.filterFromEntitySet()
                self.state = 125
                self.match(UnifiedIRParser.ES_END)
                pass

            elif la_ == 4:
                localctx = UnifiedIRParser.EntitySetAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.entity()
                pass

            elif la_ == 5:
                localctx = UnifiedIRParser.EntitySetPlaceholderContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 128
                self.match(UnifiedIRParser.Ones)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterFromEntitySetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return UnifiedIRParser.RULE_filterFromEntitySet

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EntitySetByPredicateContext(FilterFromEntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.FilterFromEntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filterByPredicate(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByPredicateContext,0)

        def entitySet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(UnifiedIRParser.EntitySetContext)
            else:
                return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,i)

        def concept(self):
            return self.getTypedRuleContext(UnifiedIRParser.ConceptContext,0)

        def filterByQualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByQualifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByPredicate" ):
                listener.enterEntitySetByPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByPredicate" ):
                listener.exitEntitySetByPredicate(self)


    class EntitySetByAttributeContext(FilterFromEntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.FilterFromEntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filterByAttribute(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByAttributeContext,0)

        def concept(self):
            return self.getTypedRuleContext(UnifiedIRParser.ConceptContext,0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)

        def filterByQualifier(self):
            return self.getTypedRuleContext(UnifiedIRParser.FilterByQualifierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByAttribute" ):
                listener.enterEntitySetByAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByAttribute" ):
                listener.exitEntitySetByAttribute(self)


    class EntitySetByConceptContext(FilterFromEntitySetContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a UnifiedIRParser.FilterFromEntitySetContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def concept(self):
            return self.getTypedRuleContext(UnifiedIRParser.ConceptContext,0)

        def entitySet(self):
            return self.getTypedRuleContext(UnifiedIRParser.EntitySetContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntitySetByConcept" ):
                listener.enterEntitySetByConcept(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntitySetByConcept" ):
                listener.exitEntitySetByConcept(self)



    def filterFromEntitySet(self):
